# propeller

./: .dockerignore  .gitignore  .gitmodules  .golangci.yaml  .mockery.yaml  CNAME  Dockerfile  FML_REVIEW.md  Makefile  README.md  config.go  go.mod  go.sum  test.md
.github/: dependabot.yml
.github/workflows/: build.yml  cd.yml  ci.yml  go-ci.yml  rust-ci.yaml
cli/: add_proplets.go  add_proxy.go  embed_proplet.go  log.go  provision.go  tasks.go
cmd/: add.wasm  main.go
cmd/cli/: main.go
cmd/manager/: main.go  start.go
cmd/propellerd/: main.go
cmd/proplet/: main.go  start.go
cmd/proxy/: .env  main.go
crates/propeller-plugin-sdk/: Cargo.toml
crates/propeller-proplet-plugin-sdk/: Cargo.toml
crates/propeller-proplet-plugin-sdk/src/: lib.rs
crates/propeller-proplet-plugin-sdk/wit/: proplet-plugin.wit
docker/: .env  Dockerfile  Dockerfile.dev  Dockerfile.proplet  Dockerfile.proplet-wasinn  Dockerfile.proplet.dev  compose.propeller.yaml  compose.yaml  permission.yaml  supermq-compose.yaml
docker/nats/: nats.conf
docker/nginx/: .gitignore  entrypoint.sh  nginx-key.conf  nginx-x509.conf
docker/ssl/: .gitignore  Makefile  authorization.js
docker/templates/: smtp-notifier.tmpl
docs/: architecture.md  encrypted-wasm-implementation-plan.md  hybrid-orchestration.md
embed-proplet/: CMakeLists.txt  prj.conf  test_fl_envelope.c
embed-proplet/boards/: esp32s3_devkitc_procpu.conf
embed-proplet/modules/wamr/: CMakeLists.txt
embed-proplet/src/: CMakeLists.txt  client.c  client.h  credentials.c  credentials.h  main.c  mqtt_client.c  mqtt_client.h  task_monitor.c  task_monitor.h  wasm_handler.c  wasm_handler.h  wifi_manager.c  wifi_manager.h
examples/addition-wat/: addition.wat
examples/attestation-test/: Cargo.toml  README.md
examples/compute/: compute.go
examples/esp32s3-wasm-benchmark-zephyr/: CMakeLists.txt  prj.conf
examples/esp32s3-wasm-benchmark-zephyr/boards/: esp32s3_devkitc_procpu.conf
examples/esp32s3-wasm-benchmark-zephyr/src/: bench.c  bench.h  main.c  metrics.c  metrics.h  wasm_bins.h  wasm_tasks.h
examples/esp32s3-wasm-benchmark-zephyr/wat/: Makefile  add.wat  checksum.wat  cpu_stress.wat  fib.wat  gen_headers.py  mem_stress.wat  msg_stress.wat  mul.wat  popcount.wat
examples/filesystem/: Cargo.toml
examples/fl-demo/: README.md  clear-provisioned-ids.py  compose.yaml  provision-smq.py
examples/fl-embedded/: .gitignore  Makefile  README.md  fl-client.go
examples/greet-component/: Cargo.toml
examples/hal-runner/: Cargo.toml  README.md
examples/hal-runner/src/: main.rs
examples/hal-test/: Cargo.toml  README.md
examples/http-client/: Cargo.toml
examples/http-client-raw-wit/: Cargo.toml
examples/http-client-raw-wit/src/: main.rs
examples/http-client-raw-wit/wit/: world.wit
examples/http-greet-component/: Cargo.toml
examples/http-server/: Cargo.toml
examples/http-server/src/: lib.rs
examples/http-server/wit/: world.wit
examples/long-addition/: long-addition.go
examples/ml-wasm/: main.go  model_gen.go  mymodel.pkl  mymodel.wasm  train_model.py
examples/platform-test/: Cargo.toml
examples/plugin-auth/: Cargo.toml
examples/plugin-proxy/: Cargo.toml
examples/proplet-plugin-example/: Cargo.toml
examples/wasi-nn/: Cargo.toml  README.md
hal/ubuntu/: README.md  qemu.sh
job/: job.go
k8s/config/: config.go
k8s/examples/: external-proplet.yaml  k8s-proplet.yaml  tasks.yaml
k8s/manifests/: crds.yaml  deployment.yaml  rbac.yaml
k8s/operator/: main.go
manager/: cron.go  cron_scheduler.go  fl_integration_test.go  fl_service.go  fl_types.go  manager.go  metrics.go  mqtt.go  service.go  service_job_test.go  service_proplet_test.go  service_test.go  service_workflow_test.go  shutdown_test.go  workflow.go  workflow_test.go
manager/api/: endpoint.go  fl_endpoints.go  requests.go  requests_internal_test.go  requests_test.go  responses.go  transport.go  transport_test.go
manager/hybrid/: service.go  service_test.go
manager/middleware/: logging.go  metrics.go  plugin.go  plugin_test.go  tracing.go
manager/mocks/: manager.go  service.go
node/: node.go
pkg/api/: api.go
pkg/config/: config.go
pkg/cron/: parser.go
pkg/dag/: validator.go  validator_test.go
pkg/errors/: errors.go
pkg/fl/: aggregator.go  errors.go  storage.go  types.go  wasm_aggregator.go
pkg/job/: job.go
pkg/maps/: maps.go
pkg/mqtt/: export_test.go  pubsub.go  tls_test.go
pkg/plugin/: auth.go  plugin.go  registry.go  wasm.go  wasm_nocgo.go  wasm_test.go
pkg/proplet/: metrics.go  proplet.go  resource_usage.go  status_test.go
pkg/scheduler/: hybrid.go  hybrid_test.go  priority.go  roundrobin.go  scheduler.go
pkg/sdf/: proplet.go  (+2 more)
propellerd/: log.go  manager.go  proplet.go  tasks.go
proplet/: Cargo.toml  README.md  config.go  config.json  mqtt.go  requests.go  runtime.go  service.go  wasm.go  worker.go
proplet-rs/: Cargo.toml  README.md
proplet/api/: requests.go  responses.go
proplet/elastic-wit/: world.wit
proplet/monitoring/: monitor.go
proplet/repository/: config.go  mqtt.go
proplet/runtimes/: host.go  wazero.go
proplet/src/: config.rs  crypto.rs  elastic_component_linker.rs  hal.rs  hal_component.rs  hal_component_linker.rs  hal_linker.rs  lib.rs  main.rs  metrics.rs  mqtt.rs  service.rs  task_handler.rs  tee_detection.rs  telemetry.rs  types.rs
proplet/src/attestation/: config.rs  mod.rs  service.rs
proplet/src/cdh/: config.rs  core.rs  error.rs  mod.rs
proplet/src/cdh/attestation/: mod.rs
proplet/src/cdh/image/: mod.rs
proplet/src/cdh/resource/: mod.rs
proplet/src/cdh/secret/: mod.rs
proplet/src/cdh/tee/: mod.rs
proplet/src/monitoring/: metrics.rs  mod.rs  profiles.rs  system.rs
proplet/src/plugin/: mod.rs  registry.rs
proplet/src/runtime/: host.rs  mod.rs  tee_runtime.rs  wasmtime_runtime.rs
proplet/src/tee/: detector.rs  mod.rs
proplet/tests/: integration_test.rs
proplet/wit/hal/: hal.wit  world.wit
provision/: provision.sh
proxy/: README.md  config.go  handler.go  http.go  mqtt.go  service.go  stream.go
task/: task.go  url.go
worker/: wasm.go  worker.go
(+129 files in other folders)
