[package]
name = "proplet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
wasmtime = "27.0"
wasmtime-wasi = "27.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
async-trait = "0.1"
base64 = "0.22.1"
url = "2.5"
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
reqwest = { version = "0.12", features = ["json"] }

# TEE & Encryption Support (optional feature)
attestation-agent = { git = "https://github.com/rodneyosodo/guest-components", branch = "enable-wasm-workloads", optional = true, default-features = false, features = ["rust-crypto", "kbs"] }
image-rs = { git = "https://github.com/rodneyosodo/guest-components", branch = "enable-wasm-workloads", optional = true, default-features = false, features = ["encryption-ring", "keywrap-grpc", "oci-client-rustls", "signature-cosign-rustls", "futures"] }
kbs_protocol = { git = "https://github.com/rodneyosodo/guest-components", branch = "enable-wasm-workloads", optional = true, features = ["background_check", "rust-crypto"], default-features = false }
oci-client = { version = "0.15", optional = true, default-features = false, features = ["rustls-tls"] }
oci-spec = { version = "0.8", optional = true }
resource_uri = { git = "https://github.com/rodneyosodo/guest-components", branch = "enable-wasm-workloads", optional = true }
hex = { version = "0.4", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = []
tee = ["attestation-agent", "image-rs", "kbs_protocol", "oci-client", "oci-spec", "resource_uri", "hex", "futures-util"]
tdx-attester = ["tee", "attestation-agent/tdx-attester"]
snp-attester = ["tee", "attestation-agent/snp-attester"]
sgx-attester = ["tee", "attestation-agent/sgx-attester"]
az-snp-vtpm-attester = ["tee", "attestation-agent/az-snp-vtpm-attester"]
az-tdx-vtpm-attester = ["tee", "attestation-agent/az-tdx-vtpm-attester"]
se-attester = ["tee", "attestation-agent/se-attester"]
cca-attester = ["tee", "attestation-agent/cca-attester"]
tpm-attester = ["tee", "attestation-agent/tpm-attester"]
all-attesters = ["tee", "attestation-agent/all-attesters"]
