[package]
name = "proplet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
rumqttc = "0.25.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
wasmtime = { version = "42.0.1", features = ["component-model", "async"] }
wasmtime-wasi = "42.0.1"
wasmtime-wasi-http = "42.0.1"
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15.19"
async-trait = "0.1"
base64 = "0.22.1"
url = "2.5"
sysinfo = "0.38.4"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
reqwest = { version = "0.12", features = ["json"] }

# TEE & Encryption Support (default feature)
attestation-agent = { git = "https://github.com/rodneyosodo/guest-components", branch = "enable-wasm-workloads", default-features = false, features = ["rust-crypto", "kbs"] }
image-rs = { git = "https://github.com/rodneyosodo/guest-components", branch = "enable-wasm-workloads", default-features = false, features = ["encryption-ring", "keywrap-grpc", "oci-client-rustls", "signature-cosign-rustls", "futures"] }
kbs_protocol = { git = "https://github.com/rodneyosodo/guest-components", branch = "enable-wasm-workloads", features = ["background_check", "rust-crypto"], default-features = false }
oci-client = { version = "0.15", default-features = false, features = ["rustls-tls"] }
oci-spec = { version = "0.9.0" }
resource_uri = { git = "https://github.com/rodneyosodo/guest-components", branch = "enable-wasm-workloads" }
hex = { version = "0.4" }
futures-util = { version = "0.3" }

# ELASTIC TEE HAL — hardware abstraction layer for TEE workloads
elastic-tee-hal = { git = "https://github.com/elasticproject-eu/wasmhal", default-features = false, features = ["amd-sev"] }

[features]
default = []

[profile.release]
strip = "symbols"
