[package]
name = "proplet"
version = "0.4.0"
edition = "2021"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
rumqttc = "0.25.1"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
webpki-roots = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.6"
wasmtime = { version = "44.0.0", features = [
    "component-model",
    "async",
    "wave",
] }
wasmtime-wasi = "44.0.0"
wasmtime-wasi-http = "44.0.0"
hyper = { version = "1.9", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client", "reqwest-rustls"] }
prometheus = "0.13"
http-body-util = "0.1"
config = "0.15.22"
async-trait = "0.1"
base64 = "0.22.1"
url = "2.5"
sysinfo = "0.38.4"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
socket2 = { version = "0.6", features = ["all"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }

# TEE & Encryption Support (default feature)
attestation-agent = { git = "https://github.com/rodneyosodo/guest-components", branch = "enable-wasm-workloads", default-features = false, features = [
    "rust-crypto",
    "kbs",
] }
image-rs = { git = "https://github.com/rodneyosodo/guest-components", branch = "enable-wasm-workloads", default-features = false, features = [
    "encryption-ring",
    "keywrap-grpc",
    "oci-client-rustls",
    "signature-cosign-rustls",
    "futures",
] }
kbs_protocol = { git = "https://github.com/rodneyosodo/guest-components", branch = "enable-wasm-workloads", features = [
    "background_check",
    "rust-crypto",
], default-features = false }
oci-client = { git = "https://github.com/oras-project/rust-oci-client", rev = "83092a67ebcaeed832eae090895a1c178d867344", default-features = false, features = [
    "rustls-tls",
] }
oci-spec = { version = "0.9.0" }
resource_uri = { git = "https://github.com/rodneyosodo/guest-components", branch = "enable-wasm-workloads" }
hex = { version = "0.4" }
futures-util = { version = "0.3" }

# ELASTIC TEE HAL — hardware abstraction layer for TEE workloads
elastic-tee-hal = { git = "https://github.com/elasticproject-eu/wasmhal", rev = "c3174f90ef4df71601683d36fa3f1f5f71b6bf4d", default-features = false, features = [
    "amd-sev",
] }
wasm-wave = "0.246.2"

# ELASTIC WasmHAL-Hardware: wasi-usb
wasmtime-wasi-usb = "44.0.0"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1.42", features = ["full"] }

[features]
default = []

[profile.release]
strip = "symbols"
